[metadata]
name = cachemonkey
version = 0.0.1
summary = Cachemonkey image pre-caching
description-file =
    README.rst
license = Apache License, Version 2.0
home-page = http://www.openstack.org
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = Cachemonkey Team
author-email = openstack-dev@lists.openstack.org

[files]
packages =
    cachemonkey

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[entry_points]
console_scripts =
    cachemonkey-server = cachemonkey.cmd.server:main
